-*- coding: utf-8; fill-column: 68 -*-

=======
CHANGES
=======
0.6.2
=====
- orm
  - Fixed bug regarding flushes on self-referential 
    bi-directional many-to-many relationships, where
    two objects made to mutually reference each other
    in one flush would fail to insert a row for both
    sides.  Regression from 0.5. [ticket:1824]
  
  - the post_update feature of relationship() has been
    reworked architecturally to integrate more closely
    with the new 0.6 unit of work.  The motivation 
    for the change is so that multiple "post update"
    calls, each affecting different foreign key
    columns of the same row, are executed in a single
    UPDATE statement, rather than one UPDATE 
    statement per column per row.   Multiple row
    updates are also batched into executemany()s as 
    possible, while maintaining consistent row ordering.
    
  - Query.statement, Query.subquery(), etc. now transfer
    the values of bind parameters, i.e. those specified
    by query.params(), into the resulting SQL expression.
    Previously the values would not be transferred
    and bind parameters would come out as None.
    
  - Subquery-eager-loading now works with Query objects
    which include params(), as well as get() Queries.

  - Can now call make_transient() on an instance that
    is referenced by parent objects via many-to-one,
    without the parent's foreign key value getting
    temporarily set to None - this was a function
    of the "detect primary key switch" flush handler.
    It now ignores objects that are no longer 
    in the "persistent" state, and the parent's 
    foreign key identifier is left unaffected.

  - query.order_by() now accepts False, which cancels
    any existing order_by() state on the Query, allowing
    subsequent generative methods to be called which do 
    not support ORDER BY.  This is not the same as the 
    already existing feature of passing None, which 